--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -121,20 +121,28 @@
     "cultural": "예술 및 문화 교류",
     "items": [
       {
-        "title": "시장 진출 전략",
-        "description": "규제 준수 지원과 함께 한국 시장을 위한 포괄적인 시장 분석 및 진출 전략."
+        "title": "비즈니스 진출",
+        "description": "법인 설립, 회계/세무 자문, 시장 조사"
       },
       {
-        "title": "비즈니스 컨설팅",
-        "description": "한국-인도 비즈니스 관계 및 시장 역학에 맞춘 전략적 비즈니스 컨설팅 서비스."
+        "title": "투자 자문",
+        "description": "대체 투자 포트폴리오 자문 (스타트업, 채권 등), 인도 스타트업 리포트"
       },
       {
-        "title": "파트너십 개발",
-        "description": "한국과 인도 기업 간 B2B 파트너십 촉진 및 관계 구축."
+        "title": "B2B 파트너 매칭",
+        "description": "M&A(인수합병), 기술 이전, 상품 및 산업재 조달"
       },
       {
-        "title": "문화 교류 프로그램",
-        "description": "더 강한 한국-인도 비즈니스 관계를 조성하기 위한 교육 및 문화 교류 이니셔티브."
+        "title": "전략 컨설팅",
+        "description": "시장 진출 전략, 브랜드 구축 전략, 영업 전략, 마케팅 전략"
+      },
+      {
+        "title": "비즈니스 데이터",
+        "description": "KOnnectIN 플랫폼, 구매자 및 판매자 검색, 인도 산업 및 시장 뉴스"
+      },
+      {
+        "title": "문화 프로젝트 및 인재 개발",
+        "description": "프로젝트 기획, 프로젝트 조정"
       }
     ]
   },
