Complete Key Achievements section Korean translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -71,7 +71,9 @@
   },
   "achievements": {
     "title": "Key Achievements",
-    "subtitle": "Milestones in Korea-India Business Collaboration",
+    "subtitle": "Leading Korea-India Business Collaboration",
+    "mainTitle": "Leading Korea-India",
+    "mainSubtitle": "Business Collaboration",
     "stats": [
       {
         "number": "50+",
