--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -72,6 +72,8 @@
   "achievements": {
     "title": "주요 성과",
     "subtitle": "한국-인도 비즈니스 협력의 이정표",
+    "mainTitle": "한국-인도를 선도하는",
+    "mainSubtitle": "비즈니스 협력",
     "stats": [
       {
         "number": "50+",
