--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -4,10 +4,23 @@
     "about": "회사소개",
     "services": "서비스",
     "projects": "프로젝트",
-    "case-studies": "케이스 스터디",
+    "case-studies": "사례연구",
     "blog": "블로그",
     "contact": "연락처",
     "pages": "페이지"
+  },
+  "pages": {
+    "home": "홈",
+    "services": "서비스",
+    "about": "회사소개",
+    "contact": "연락처",
+    "blog": "블로그",
+    "projects": "프로젝트",
+    "case-studies": "사례연구",
+    "team": "팀",
+    "testimonial": "고객후기",
+    "pricing": "가격",
+    "faq": "자주묻는질문"
   },
   "banner": {
     "slide1": {
@@ -68,6 +81,52 @@
         "description": "시장 조사부터 비즈니스 설립 및 지속적인 지원까지 포괄적인 서비스를 제공합니다."
       }
     ]
+  },
+  "howWeWork": {
+    "title": "업무 진행 방식",
+    "subtitle": "전략적 프로세스",
+    "description": "검증된 방법론으로 결과 전달",
+    "items": [
+      {
+        "step": "01",
+        "title": "G2B 및 B2B 파트너 식별",
+        "description": "정부 및 기업 파트너십을 위한 적합한 파트너 발굴"
+      },
+      {
+        "step": "02",
+        "title": "합작투자 및 M&A 지원",
+        "description": "합작투자 및 인수합병을 위한 적합한 기업 식별에 대한 전략적 지원 제공"
+      },
+      {
+        "step": "03",
+        "title": "파트너 재정 안정성 및 성장 조사",
+        "description": "잠재적 파트너의 재정 건전성과 성장 잠재력 분석"
+      },
+      {
+        "step": "04",
+        "title": "유통 및 공급망 확장",
+        "description": "효율적인 유통 네트워크 구축 및 공급망 최적화 지원"
+      }
+    ]
+  },
+  "cta": {
+    "title": "한국으로 사업을 확장할 준비가 되셨나요?",
+    "description": "저희 전문 팀이 한국 시장 진입 과정을 안내해드립니다. 맞춤형 전략과 검증된 솔루션으로 비즈니스 성공을 이끌어내세요.",
+    "buttonText": "무료 컨설팅 예약",
+    "contactInfo": {
+      "phone": {
+        "title": "24시간 지원",
+        "number": "+82-2-123-4567"
+      },
+      "email": {
+        "title": "이메일 문의",
+        "address": "info@starajin.com"
+      },
+      "location": {
+        "title": "방문 상담",
+        "address": "서울, 대한민국"
+      }
+    }
   },
   "achievements": {
     "title": "주요 성과",
@@ -141,6 +200,42 @@
         "description": "프로젝트 기획, 프로젝트 조정"
       }
     ]
+  },
+  "solutions": {
+    "title": "핵심 비즈니스 솔루션",
+    "subtitle": "비전을 한국 시장 성공으로 전환하는 전략적 컨설팅",
+    "description1": "StaraJIN에서는 성공적인 시장 진입이 깊은 이해와 전략적 행동에서 시작된다고 믿습니다. 저희 컨설팅 서비스는 한국 시장에서 강력한 입지를 구축할 수 있도록 포괄적인 시장 인사이트, 맞춤형 전략, 검증된 방법론을 제공하도록 설계되었습니다.",
+    "description2": "비즈니스 운영 확장, 파트너십 구축, 규제 요건 탐색 등 무엇을 찾고 계시든, 저희는 한국 시장 여정의 모든 단계에서 귀하를 안내해 드립니다.",
+    "keyAreasTitle": "우리가 집중하는 핵심 영역",
+    "focusAreas": [
+      "귀하의 비즈니스가 인도 시장에 성공적으로 진출할 수 있도록 지원",
+      "지속 가능한 회사 성장을 위한 전략, 조달, 협력 및 인수 제안 컨설팅 제공",
+      "인재 및 문화 교류 촉진"
+    ],
+    "cards": {
+      "mission": {
+        "title": "목적으로 추진하고, 결과로 인도하다",
+        "description": "귀하의 비즈니스 목표와 한국 시장 역학에 부합하는 포괄적인 시장 진입 전략을 제공합니다."
+      },
+      "trust": {
+        "title": "신뢰를 바탕으로, 경험으로 뒷받침하다",
+        "description": "검증된 실적과 깊은 현지 전문성으로 한국 시장 여정의 모든 단계에서 신뢰할 수 있는 가이드를 제공합니다."
+      },
+      "principles": {
+        "title": "우리가 취하는 모든 단계를 이끄는 원칙들",
+        "description": "우수성, 무결성, 문화적 이해가 우리의 컨설팅 접근법과 고객 관계의 토대를 형성합니다."
+      }
+    },
+    "keyFocus": {
+      "title": "우리의 주요 전문 분야",
+      "description": "시장 진입 전략, 문화 통합, 비즈니스 개발, 법적 규제 준수, 파트너십 촉진, 운영 우수성",
+      "item1": "시장 진입 전략",
+      "item2": "문화적 통합",
+      "item3": "비즈니스 개발",
+      "item4": "법률 및 규제 준수",
+      "item5": "파트너십 촉진",
+      "item6": "운영 우수성"
+    }
   },
   "partners": {
     "title": "신뢰 및 파트너십",
