Complete About page content update - Update Mission, Vision, Core Values with StaraJIN business focus - Add Why Choose Us section with Korea-India achievements - Create vertical timeline with 4+ year company journey - Add Team section with 3 key members - Fix banner translation issue for About Us page - Update all content to reflect Korea-India business consulting

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -13,6 +13,7 @@
     "home": "Home",
     "services": "Services",
     "about": "About Us",
+    "about us": "About Us",
     "contact": "Contact",
     "blog": "Blog",
     "projects": "Projects",
