--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -13,6 +13,7 @@
     "home": "홈",
     "services": "서비스",
     "about": "회사소개",
+    "about us": "회사소개",
     "contact": "연락처",
     "blog": "블로그",
     "projects": "프로젝트",
