--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -16,6 +16,111 @@
     "about us": "회사소개",
     "contact": "연락처",
     "blog": "블로그",
+    "viewMore": "더보기"
+  },
+  "about": {
+    "financial": {
+      "title": "비즈니스 여정을 지원합니다",
+      "subtitle": "명확함과 신뢰로",
+      "description": "저희는 한국과 인도 간의 성공적인 사업 확장을 위해 맞춤형 전략과 신뢰할 수 있는 가이던스로 기업의 전략적 의사결정을 돕는 전문 컨설턴트 팀입니다"
+    },
+    "choose": {
+      "tag": "선택하는 이유",
+      "title": "신뢰할 수 있는 파트너",
+      "subtitle": "한국-인도 비즈니스 성공을 위한",
+      "description": "15년 이상의 경험과 1000개 이상의 네트워크를 바탕으로 50개 이상의 성공 사례를 통해 검증된 결과를 제공하며, 한국-인도 비즈니스 확장 여정에 포괄적인 지원을 제공합니다.",
+      "achievements": {
+        "experience": "인도 15년+ 경험",
+        "experienceDesc": "전문가와 노하우를 갖춘 인도 15년 경험",
+        "network": "1000+ 네트워크",
+        "networkDesc": "한국-인도 정부, 기업, 기관 전반에 걸친 긴밀한 네트워크 구축",
+        "cases": "50+ 성공 사례",
+        "casesDesc": "데이터 기반의 맞춤형 전략으로 많은 성공 스토리",
+        "support": "100% 전면 지원",
+        "supportDesc": "시장 진출부터 성장까지 포괄적인 지원"
+      }
+    },
+    "solution": {
+      "title": "우리의 여정",
+      "subtitle": "4년 이상 축적된 전문성",
+      "timeline": {
+        "2020": {
+          "title": "STARAJIN 설립",
+          "desc": "웰니스 관광클러스터 프로젝트 어드바이저. 한국 특수화학 회사의 인도 사업 개발. 해남 댐소 예술단체 KOFICE 지역문화 국제교류 프로젝트 운영."
+        },
+        "2021": {
+          "title": "전략적 파트너십",
+          "desc": "G2B 컨설팅 회사 THEISTIC과 MOU. 자동차 및 IT 인력교류 관련 광주 FEZ 자문. R&F 케미칼 <매직 코퍼 마스크> 인도 마케팅 및 프로모션."
+        },
+        "2022": {
+          "title": "사업 확장",
+          "desc": "폐기물 에너지화 프로젝트 기술사업화 및 사업개발. 광주시 K-컬처센터 인도 사업 공식 파트너. 메종 인디아 트래블 앤 북스 공식 마케팅 파트너. 인도 정부 PR 에이전시 MMJP 미디어와 MOU."
+        },
+        "2023": {
+          "title": "프로젝트 리더십",
+          "desc": "인도 9개 주 폐기물 관리 파일럿 프로젝트 한국 파트너. 남이섬 문화교육그룹 인도-한국 아티스트 캠프 어드바이저. 한국언론진흥재단 미디어 스타트업 지원사업 선정."
+        },
+        "2024": {
+          "title": "혁신과 성장",
+          "desc": "한국-인도 비즈니스 매칭 플랫폼 'Konnectin' 론칭. 인도 특수화학제조업체협회와 MOU. 인도 스타트업 협회 'WeSpark'과 MOU. 법규 컨설팅 회사 밀라노 컨설턴트와 MOU. 한국 기후 플랫폼 EV VERYWORDS와 MOU."
+        }
+      }
+    },
+    "team": {
+      "tag": "우리 팀",
+      "title": "전문가 팀을 만나보세요",
+      "subtitle": "한국-인도 비즈니스 협력을 선도하는",
+      "viewAll": "팀 전체 보기",
+      "members": {
+        "yujin": {
+          "name": "한유진",
+          "designation": "창립자 & CEO",
+          "description": "10년 이상의 국제 컨설팅 경험을 바탕으로 한국-인도 비즈니스 관계 전문가입니다."
+        },
+        "rajesh": {
+          "name": "라제시 쿠마르 박사",
+          "designation": "인도 사업부 이사",
+          "description": "인도 시장 규제 및 규정 준수에 대한 깊은 전문 지식을 갖춘 전 정부 관리입니다."
+        },
+        "minjun": {
+          "name": "김민준",
+          "designation": "문화교류 이사",
+          "description": "문화 간 커뮤니케이션과 교육 프로그램 개발 전문가입니다."
+        }
+      }
+    }
+  },
+  "projects": {
+    "hero": {
+      "title": "우리의 프로젝트 & 파트너십",
+      "subtitle": "한국과 인도의 비즈니스, 문화, 커뮤니티를 연결하는 성공적인 이니셔티브를 만나보세요"
+    },
+    "filters": {
+      "all": "모든 프로젝트",
+      "mou": "업무협약",
+      "cultural": "문화교류", 
+      "publication": "출판",
+      "tour": "투어"
+    },
+    "stats": {
+      "title": "우리의 성과",
+      "subtitle": "한국-인도 이니셔티브의 측정 가능한 결과",
+      "projects": "성공한 프로젝트",
+      "participants": "참가자", 
+      "partners": "파트너 조직",
+      "years": "우수성의 해"
+    },
+    "project": {
+      "viewDetails": "자세히 보기",
+      "participants": "참가자",
+      "status": {
+        "completed": "완료",
+        "ongoing": "진행중", 
+        "upcoming": "예정"
+      }
+    }
+  },
+  "menu": {
     "projects": "프로젝트",
     "case-studies": "사례연구",
     "team": "팀",
