--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -169,10 +169,10 @@
   },
   "banner": {
     "slide1": {
-      "title": "시장 진출",
-      "subtitle": "전략",
-      "description": "한국 시장 진출을 위한 포괄적인 솔루션으로 비즈니스 목표를 현실로 만들어보세요.",
-      "cta": "여정 시작하기",
+      "title": "한국과 인도를 연결하여",
+      "subtitle": "비즈니스 성공을 이끕니다",
+      "description": "무역 촉진, 비즈니스 매칭, 한국-인도 간 전략적 파트너십을 위한 신뢰할 수 있는 파트너입니다.",
+      "cta": "시작하기",
       "features": [
         "종합적인 시장 분석",
         "규제 준수 지원",
@@ -334,28 +334,28 @@
     "cultural": "예술 및 문화 교류",
     "items": [
       {
-        "title": "비즈니스 진출",
-        "description": "법인 설립, 회계/세무 자문, 시장 조사"
+        "title": "무역 촉진 및 비즈니스 매칭",
+        "description": "B2B 미팅 및 분야별 무역박람회 개최. 수출 촉진 및 소싱 파트너십 지원. CEO 및 의사결정자와의 바이어-셀러 미팅 및 라운드테이블 개최."
       },
       {
-        "title": "투자 자문",
-        "description": "대체 투자 포트폴리오 자문 (스타트업, 채권 등), 인도 스타트업 리포트"
+        "title": "전시회 및 이벤트 관리 (B2B)",
+        "description": "India Trend Fair, India Fashion & Lifestyle Show, India Auto Parts Show, India Food Fair Korea 등 주요 행사 개최. 한국-인도 무역단체 및 대사관과 협력. 전시회 참가 지원."
       },
       {
-        "title": "B2B 파트너 매칭",
-        "description": "M&A(인수합병), 기술 이전, 상품 및 산업재 조달"
+        "title": "MICE 및 부스 설치, 파빌리온 건설",
+        "description": "기업을 위한 회의, 인센티브, 컨퍼런스, 전시회(MICE) 기획 및 실행. 기자회견, 제품 런칭 행사 조직. 전시 부스, 파빌리온 건설 및 장식."
       },
       {
-        "title": "전략 컨설팅",
-        "description": "시장 진출 전략, 브랜드 구축 전략, 영업 전략, 마케팅 전략"
+        "title": "수출 촉진 지원 / 시장 조사",
+        "description": "인도 또는 한국 진출 기업을 위한 심층적인 분야별 시장 조사 수행. 제품 적응, 패키지 디자인, 라벨링 지원. 제품 카탈로그 및 비즈니스 커뮤니케이션을 위한 언어 및 번역 지원."
       },
       {
-        "title": "비즈니스 데이터",
-        "description": "KOnnectIN 플랫폼, 구매자 및 판매자 검색, 인도 산업 및 시장 뉴스"
+        "title": "대표단 지원 및 비즈니스 투어",
+        "description": "고위급 정부 및 비즈니스 대표단 조정. 공장 방문, 농장 방문, 기술 투어, 세미나, 혁신 및 R&D 센터 방문 주선. G2G 및 B2B 대화 촉진."
       },
       {
-        "title": "문화 프로젝트 및 인재 개발",
-        "description": "프로젝트 기획, 프로젝트 조정"
+        "title": "기술 이전 및 합작 투자 협력",
+        "description": "인도-한국 기업 간 합작 투자/기술 이전 기회 발굴 및 지원. 기술 섬유, 스마트 제조, 정밀 농업 분야 협력 지원."
       }
     ]
   },
